tests/fixtures/invalid/pow_bytes_set_str.py
# Cannot call pow() with Bytes, Set[int], Str
x = pow(b"hello", {1, 2, 3}, "hello")
